refactor: 한글 -> 영어로 네이밍 수정